Remove --add-module